--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,15 @@ description = "A simple diffusion model for nano-scale image generation"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "diffusers>=0.33.1",
+    "fastapi>=0.115.12",
     "graphviz>=0.20.3",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
-    "modal>=0.73.24",
+    "modal>=1.0.0",
     "requests>=2.32.3",
+    "ruff>=0.11.10",
+    "smart-open>=7.1.0",
     "torch>=2.6.0",
     "torchview>=0.2.6",
     "torchvision>=0.21.0",
