--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "nano-diffusion"
+name = "director-diffusion"
 version = "0.1.0"
 description = "A simple diffusion model for nano-scale image generation"
 readme = "README.md"
@@ -10,11 +10,12 @@ dependencies = [
     "graphviz>=0.20.3",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
-    "modal>=1.0.0",
+    "modal>=1.1.0",
     "requests>=2.32.3",
     "ruff>=0.11.10",
     "smart-open>=7.1.0",
     "torch>=2.6.0",
     "torchview>=0.2.6",
     "torchvision>=0.21.0",
+    "transformers>=4.53.3",
 ]
