--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,6 @@ dependencies = [
     "torch>=2.6.0",
     "torchview>=0.2.6",
     "torchvision>=0.21.0",
+    "tqdm>=4.67.1",
     "transformers>=4.53.3",
 ]
