--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "director-diffusion"
 version = "0.1.0"
-description = "A simple diffusion model for nano-scale image generation"
+description = "A repo to finetune flow state models to match the style of directors"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -19,5 +19,6 @@ dependencies = [
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
     "transformers>=4.53.3",
-    "accelerate"
+    "accelerate",
+    "peft>=0.16.0",
 ]
