--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "requests>=2.32.3",
     "ruff>=0.11.10",
     "smart-open>=7.1.0",
-    "torch>=2.6.0",
+    "torch>=2.7.0",
     "torchview>=0.2.6",
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
@@ -22,4 +22,5 @@ dependencies = [
     "accelerate",
     "peft>=0.16.0",
     "gradio>=5.39.0",
+    "para-attn>=0.3.38",
 ]
