--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,15 @@ dependencies = [
     "para-attn>=0.3.38",
     "open-clip-torch>=2.0.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pre-commit>=3.0.0",
+]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=3.0.0",
+    "pytest>=7.0.0",
+]
